Fix for alignment on request

--- a/Source/Chronozoom.UI/css/cz.less
+++ b/Source/Chronozoom.UI/css/cz.less
@@ -1661,12 +1661,14 @@ span.cz-form-preloadedrecord
     font-size: 9pt;
     width: auto;
     color: #000000;
+    padding-bottom: 1px;
 }
 
 a.cz-form-preloadedrecord.time-series-link
 {
     font-size: 9pt;
     width: auto;
+    padding-bottom: 1px;
 }
 
 
